--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
   "dependencies": {
     "express": "^4.21.2",
-    "hbs": "^4.2.0"
-  }
+    "hbs": "^4.2.0",
+    "nodemon": "^3.1.9"
+  },
+  "name": "mvc-node",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "nodemon ./src/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Archibald-of-Genoa/mvc-node.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Archibald-of-Genoa/mvc-node/issues"
+  },
+  "homepage": "https://github.com/Archibald-of-Genoa/mvc-node#readme",
+  "description": ""
 }
